--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 /dist
 /tests/e2e/videos
+/tests/e2e/screenshots
 /.nyc_output
 /coverage
 
@@ -10,10 +11,8 @@ node_modules
 .env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+*debug.log*
 
 # Editor directories and files
 .idea
