--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: focal
 language: node_js
 node_js: lts/*
 
+branches:
+  only:
+    - master
+
 script:
   - npm run lint -- --no-fix
   - npm run test:e2e -- --headless
