Add deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,12 @@ cache:
 script:
   - npm run lint -- --no-fix
   - npm run test:e2e -- --headless
+
+before_deploy:
+  - npm run build
+
+deploy:
+  provider: pages
+  strategy: git
+  token: $GITHUB_TOKEN
+  local_dir: dist
