Send the coverage info to the Coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ cache:
 script:
   - npm run lint -- --no-fix
   - npm run test:e2e -- --headless
+  - cat ./coverage/lcov.info | coveralls
 
 before_deploy:
   - npm run build
